Fix bug with section name not being visible

--- a/src/main/resources/assets/css/song.css
+++ b/src/main/resources/assets/css/song.css
@@ -69,6 +69,7 @@ section {
     animation-name: enterAnimation;
     animation-duration: 0.5s;
     animation-fill-mode: backwards;
+    z-index: 100;
 }
 
 .page {
